--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,41 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Rasa Bot</title>
 </head>
-<body>
-    <h1>Test bot</h1>
-    <form action="/" method="post">
-        User: <input type="text" name="user_chat" id="user_chat"></br>
-        Bot: <div id="bot_chat">{{bot_chat}}</div>
-        <input type="submit" value="Gửi">
-    </form>
-</body>
+    <body class="flex flex-col items-center justify-center w-screen min-h-screen bg-gray-100 text-gray-800 p-10">
+        
+        <!-- Component Start -->
+        <div class="flex flex-col flex-grow w-full max-w-xl bg-white shadow-xl rounded-lg overflow-hidden">
+            <div class="flex flex-col flex-grow h-0 p-4 overflow-auto">
+                <div class="flex w-full mt-2 space-x-3 max-w-xs" id="box_nhan">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300">
+                    </div>
+                    <div>
+                        <div class="bg-gray-300 p-3 rounded-r-lg rounded-bl-lg">
+                            <p class="text-sm" id="bot_chat">{{bot_chat}}</p>
+                        </div>
+                        <span class="text-xs text-gray-500 leading-none">1 giây trước</span>
+                    </div>
+                </div>
+            </div>
+        <form action="/" method="post">
+            <div class="bg-gray-300 p-4">
+                <input class="flex items-center h-10 w-full rounded px-3 text-sm" type="text" placeholder="Nhập câu hỏi..." name="user_chat" id="user_chat">
+            </div>
+        </form>
+        </div>
+    
+    </body>
 </html>
+<script> 
+    // Lấy phần tử có id là "box_nhan", ẩn hiện nó
+    var boxNhan = document.getElementById("box_nhan");
+    var botChatValue = document.getElementById("bot_chat").innerText;
+    if (botChatValue.trim() === "") {
+    boxNhan.style.display = "none";
+    } else {
+    boxNhan.style.display = "flex"; 
+    }
+</script>
